@@ -25,29 +25,45 @@ namespace dolfin {
   class Function : public Variable {
   public:
 
+    /// Create a function of unspecified type
+    Function();
+
     /// Create function specified on given mesh with given nodal values
     Function(Mesh& mesh, dolfin::Vector& x, int dim = 0, int size = 1);
 
     /// Create function specified by the given expression
     Function(const char* name,  int dim = 0, int size = 1);
 
-    /// Create function specified by the given element data
-    Function(ElementData& elmdata);
+    /// Create an ODE function of given dimension
+    Function(unsigned int N);
 
     /// Destructor
     ~Function();
 
-    // Evaluation for given node and time
+    /// Initialize function on given mesh with given nodal values
+    void init(Mesh& mesh, dolfin::Vector& x, int dim = 0, int size = 1);
+
+    /// Create function specified by the given expression
+    void init(const char* name,  int dim = 0, int size = 1);
+
+    /// Create an ODE function of given dimension
+    void init(unsigned int N);
+    
+    /// Evaluation for given node and time
     real operator() (const Node&  n, real t = 0.0) const;
+    real operator() (const Node&  n, real t = 0.0);
 
-    // Evaluation for given point and time
+    /// Evaluation for given point and time
     real operator() (const Point& p, real t = 0.0) const;
+    real operator() (const Point& p, real t = 0.0);
 
-    // Evaluation for given coordinates and time
+    /// Evaluation for given coordinates and time
     real operator() (real x, real y, real z, real t) const;
+    real operator() (real x, real y, real z, real t);
 
-    // Evaluation for given component and time
+    /// Evaluation for given component and time
     real operator() (unsigned int i, real t) const;
+    real operator() (unsigned int i, real t);
     
     // Update function to given time
     void update(real t);
@@ -60,6 +76,9 @@ namespace dolfin {
 
     // Get mesh
     Mesh& mesh() const;
+
+    // Get element data
+    ElementData& elmdata();
 
     // Update values of element function
     void update(FunctionSpace::ElementFunction& v,
